# lorem-ipsum

./: .gitignore  lorem-ipsum.cabal
src/Test/QuickCheck/: LoremIpsum.hs
